alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,10 +270,19 @@ hr {
 }
 
 .video-container {
-	margin: 50px auto 0 525px !important;
+	margin: 50px auto 0 26% !important;
 }
 
 .video-container iframe {
 	width: 65% !important;
 	height: 50% !important;
+}
+
+.about-main {
+	margin: 20px auto !important;
+}
+
+.mainAbout {
+	margin-top: 50px;
+	margin-left:27.5%;
 }
